// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`switchButtonField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_b9c48i2 uv_b9c48i0 uv_xf61n40 uv_xf61n42j"
      >
        <div
          class="uv_b9c48i4 uv_b9c48i3 uv_475tnd0 uv_475tnd1 uv_475tnd5 uv_475tnd6 uv_xf61n40 uv_xf61n4v uv_xf61n42d uv_xf61n45j"
          data-checked="false"
          data-disabled="false"
          data-testid="switch-button-left"
          data-type="radio"
          role="button"
          style="--uv_1d8tbmb3: 1; --uv_18vc4d30: none; --uv_18vc4d31: inline; --uv_18vc4d32: 100%;"
          tabindex="0"
        >
          <div
            class="uv_17da2jl0 uv_xf61n40 uv_xf61n42d uv_xf61n45j"
          >
            <div
              aria-disabled="false"
              class="uv_475tndd uv_17da2jl4 uv_17da2jl2"
              data-checked="false"
              data-invalid="false"
            >
              <input
                aria-disabled="false"
                class="uv_17da2jla"
                id="_r_4_"
                name="test"
                tabindex="-1"
                type="radio"
                value="left"
              />
              <svg
                class="uv_17da2jlb"
                viewBox="0 0 24 24"
              >
                <title>
                  radio
                </title>
                <g>
                  <circle
                    class="uv_17da2jle"
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="6"
                  />
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="uv_17da2jld"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="uv_17da2jlc"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="uv_17da2jl7 uv_17da2jl5 uv_17da2jl8 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
                for="_r_4_"
              >
                Left
              </label>
            </div>
          </div>
        </div>
        <div
          class="uv_b9c48i4 uv_b9c48i3 uv_475tnd0 uv_475tnd1 uv_475tnd5 uv_475tnd6 uv_xf61n40 uv_xf61n4v uv_xf61n42d uv_xf61n45j"
          data-checked="false"
          data-disabled="false"
          data-testid="switch-button-right"
          data-type="radio"
          role="button"
          style="--uv_1d8tbmb3: 1; --uv_18vc4d30: none; --uv_18vc4d31: inline; --uv_18vc4d32: 100%;"
          tabindex="0"
        >
          <div
            class="uv_17da2jl0 uv_xf61n40 uv_xf61n42d uv_xf61n45j"
          >
            <div
              aria-disabled="false"
              class="uv_475tndd uv_17da2jl4 uv_17da2jl2"
              data-checked="false"
              data-invalid="false"
            >
              <input
                aria-disabled="false"
                class="uv_17da2jla"
                id="_r_c_"
                name="test"
                tabindex="-1"
                type="radio"
                value="right"
              />
              <svg
                class="uv_17da2jlb"
                viewBox="0 0 24 24"
              >
                <title>
                  radio
                </title>
                <g>
                  <circle
                    class="uv_17da2jle"
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="6"
                  />
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="uv_17da2jld"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="uv_17da2jlc"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="uv_17da2jl7 uv_17da2jl5 uv_17da2jl8 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
                for="_r_c_"
              >
                Right
              </label>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`switchButtonField > should works with defaultValues 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_b9c48i2 uv_b9c48i0 uv_xf61n40 uv_xf61n42j"
      >
        <div
          class="uv_b9c48i4 uv_b9c48i3 uv_475tnd0 uv_475tnd1 uv_475tnd5 uv_475tnd6 uv_xf61n40 uv_xf61n4v uv_xf61n42d uv_xf61n45j"
          data-checked="false"
          data-disabled="false"
          data-testid="switch-button-left"
          data-type="radio"
          role="button"
          style="--uv_1d8tbmb3: 1; --uv_18vc4d30: none; --uv_18vc4d31: inline; --uv_18vc4d32: 100%;"
          tabindex="0"
        >
          <div
            class="uv_17da2jl0 uv_xf61n40 uv_xf61n42d uv_xf61n45j"
          >
            <div
              aria-disabled="false"
              class="uv_475tndd uv_17da2jl4 uv_17da2jl2"
              data-checked="false"
              data-invalid="false"
            >
              <input
                aria-disabled="false"
                class="uv_17da2jla"
                id="_r_m_"
                name="test"
                tabindex="-1"
                type="radio"
                value="left"
              />
              <svg
                class="uv_17da2jlb"
                viewBox="0 0 24 24"
              >
                <title>
                  radio
                </title>
                <g>
                  <circle
                    class="uv_17da2jle"
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="6"
                  />
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="uv_17da2jld"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="uv_17da2jlc"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="uv_17da2jl7 uv_17da2jl5 uv_17da2jl8 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
                for="_r_m_"
              >
                Left
              </label>
            </div>
          </div>
        </div>
        <div
          class="uv_b9c48i4 uv_b9c48i3 uv_475tnd0 uv_475tnd1 uv_475tnd5 uv_475tnd6 uv_xf61n40 uv_xf61n4v uv_xf61n42d uv_xf61n45j"
          data-checked="false"
          data-disabled="false"
          data-testid="switch-button-right"
          data-type="radio"
          role="button"
          style="--uv_1d8tbmb3: 1; --uv_18vc4d30: none; --uv_18vc4d31: inline; --uv_18vc4d32: 100%;"
          tabindex="0"
        >
          <div
            class="uv_17da2jl0 uv_xf61n40 uv_xf61n42d uv_xf61n45j"
          >
            <div
              aria-disabled="false"
              class="uv_475tndd uv_17da2jl4 uv_17da2jl2"
              data-checked="false"
              data-invalid="false"
            >
              <input
                aria-disabled="false"
                class="uv_17da2jla"
                id="_r_u_"
                name="test"
                tabindex="-1"
                type="radio"
                value="right"
              />
              <svg
                class="uv_17da2jlb"
                viewBox="0 0 24 24"
              >
                <title>
                  radio
                </title>
                <g>
                  <circle
                    class="uv_17da2jle"
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="6"
                  />
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="uv_17da2jld"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="uv_17da2jlc"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="uv_17da2jl7 uv_17da2jl5 uv_17da2jl8 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
                for="_r_u_"
              >
                Right
              </label>
            </div>
          </div>
        </div>
      </div>
      ,
      <button
        class="uv_8xt08s0 uv_8xt08s1 uv_8xt08s3 uv_8xt08s9 uv_8xt08se uv_8xt08si uv_8xt08sl"
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;
